--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <h5 class="card-header">Featured</h5>
                         <div class="card-body">
                             <h5 class="card-title">AYO main</h5>
-                            <img src="download.jpg" class="img-thumbnail" alt="...">
+                            <img src="/mamah_move/downlod.jpg" class="img-thumbnail" alt="...">
                             <p class="card-text">DIJAMIN SAMPAI BINTANG LIMA</p>
                             <a href="daftar_film.html" class="btn btn-primary">AYO coy</a>
                         </div>
