--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <h5 class="card-header">Featured</h5>
                     <div class="card-body">
                       <h5 class="card-title">AYO ORDER </h5>
-                      <img src="download.jpg" class="img-thumbnail" alt="...">
+                      <img src="/mamah_move/unduh.jpg" class="img-thumbnail" alt="...">
                       <p class="card-text">DIJAMIN SAMPAI BINTANG LIMA</p>
                       <a href="#" class="btn btn-primary">AYO MAIN</a>
                     </div>
@@ -69,7 +69,7 @@
                     <h5 class="card-header">Featured</h5>
                     <div class="card-body">
                       <h5 class="card-title">AYO ORDER </h5>
-                      <img src="download.jpg" class="img-thumbnail" alt="...">
+                      <img src="/mamah_move/unduh.jpg" class="img-thumbnail" alt="...">
                       <p class="card-text">DIJAMIN SAMPAI BINTANG LIMA</p>
                       <a href="#" class="btn btn-primary">AYO MAIN</a>
                     </div>
@@ -78,7 +78,7 @@
                     <h5 class="card-header">Featured</h5>
                     <div class="card-body">
                       <h5 class="card-title">AYO ORDER </h5>
-                      <img src="download.jpg" class="img-thumbnail" alt="...">
+                      <img src="/mamah_move/unduh.jpg" class="img-thumbnail" alt="...">
                       <p class="card-text">DIJAMIN SAMPAI BINTANG LIMA</p>
                       <a href="#" class="btn btn-primary">AYO MAIN</a>
                     </div>
@@ -87,7 +87,7 @@
                         <h5 class="card-header">Featured</h5>
                         <div class="card-body">
                             <h5 class="card-title">AYO main</h5>
-                            <img src="/mamah_move/downlod.jpg" class="img-thumbnail" alt="...">
+                            <img src="/mamah_move/unduh.jpg" class="img-thumbnail" alt="...">
                             <p class="card-text">DIJAMIN SAMPAI BINTANG LIMA</p>
                             <a href="daftar_film.html" class="btn btn-primary">AYO coy</a>
                         </div>
