--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <h5 class="card-header">Featured</h5>
                     <div class="card-body">
                       <h5 class="card-title">AYO ORDER </h5>
-                      <img src="/mamah_move/unduh.jpg" class="img-thumbnail" alt="...">
+                      <img src="/mamah_move/download.jpg" class="img-thumbnail" alt="...">
                       <p class="card-text">DIJAMIN SAMPAI BINTANG LIMA</p>
                       <a href="#" class="btn btn-primary">AYO MAIN</a>
                     </div>
